--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host --port $PORT"
+
   },
   "dependencies": {
     "@use-gesture/react": "^10.3.0",
