--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --host --port $PORT"
-
   },
   "dependencies": {
     "@use-gesture/react": "^10.3.0",
@@ -22,6 +21,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "baseline-browser-mapping": "^2.9.12",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
